# TinyWeb

./: .clang-format  .gitignore  Makefile  README.md  TinyWeb.conf  accepter.cc  accepter.h  api.cc  api.h  atomic.h  buffer.cc  buffer.h  cache.h  callback.h  channel.cc  channel.h  client.cc  client.h  condition.h  config.cc  config.h  configer.cc  configer.h  connection.cc  connection.h  connector.cc  connector.h  currentthread.cc  currentthread.h  defer.cc  defer.h  dict.h  docker.md  epoller.cc  epoller.h  eventloop.cc  eventloop.h  exception.cc  exception.h  factory.cc  (+67 more)
api/: api.cc  api.h  server.cc  server.h
base/: Channel.cc  Channel.h  EventLoop.cc  EventLoop.h  Makefile  Poller.cc  Poller.h  test.cc
docs/: 0.md  1-0.md  1-1.md  1-2.md  1-3.md  1-4.md  1-5.md  1-6.md  1-7.md  1-8.md  1.md  2.md  3.md  4-0.md  4-1.md  4-5.md  4-7.md  4.md  5-0.md  5.md  6.md  Idea.md  home.html  home111.html  index.html  install_jekyll.md  makefile.md  tmp.md
log/: clear_log.sh
parser/: Makefile  parser.cc  parser.h  test_parser.cc
processpoll/: Makefile  home.html  processpoll.cc  processpoll.h
server/: a  basic_server.cc  basic_server.h  server.cc  server.h
src/: CMakeLists.txt  TinyWeb.conf  TinyWebConfig.h  TinyWebConfig.h.in  debug_TinyWeb.conf  mime.types  prod_TinyWeb.conf  tmp_TinyWeb.conf
src/base/: api.cc  condition.cc  exception.cc  memorypool.cc  semaphore.h
src/core/: accepter.cc  connection.h  epoller.cc  factory.cc  main.cc  server.cc  socket.cc  threadpool.cc  threadpool.h  time.cc  timerid.h  timerqueue.h
src/http/: cache.h  proxyer.h
src/http_parser/: CMakeLists.txt  a  bench.c  deheader_test.cc  headers.txt  hosts.txt  http.cc  http.h  http_model_file.cc  http_model_file.h  http_parser.c  http_parser.cc  http_parser.h  http_responser.cc  http_responser.h  http_test.cc  http_time.h  index.html  model_file_test.cc  my_http_parser.cc  my_http_parser.h  my_http_parser_test.cc  mytest.c  mytest2.c  mytest3.cc  mytest4.cc  parseHeader_test.cc  parseHost_test.cc  parseUrl_test.cc  parse_host_test.cc  parser_test.cc  readme_parser.md  responser_test.cc  responses.txt  sdstr_t.h  str_t.h  str_test.cc  test.c  tmp.c  tmp.txt  (+1 more)
src/http_parser/mytest/: parseBody_test.cc  parseHeaderMeaning_test.cc  parseHeader_test.cc  parseRequestLine_test.cc  parseResponseLine_test.cc  parseUrl_test.cc  responseLines.txt
src/http_parser/test/: hosts.txt  mytest3.cc  parseBody_test.cc  parseUrl_test.cc  plan.md  requestLines.txt  requests.txt  result.html  test.c  tmp.txt
src/mytest/: CMakeLists.txt  TinyWebConfig.h  TinyWebConfig.h.in  all_test.cc  builder_test.cc  chain_test.cc  dynamicWeb_test.cc  httpTime_test.cc  http_parser_test.cc  idea2_test.cc  idea3_test.cc  idea4_test.cc  idea_test.cc  modelCache_test.cc  modelChunked_test.cc  modelFcgi_test.cc  modelFile_test.cc  modelGzip_test.cc  model_file_test.cc  parseBody_test.cc  parseHeaderMeaning_test.cc  parseHeader_test.cc  parseHost_test.cc  parseHttpTime_test.cc  parseRequestLine_test.cc  parseResponseLine_test.cc  parseUrl_test.cc  responser_test.cc  str_test.cc  test.cc
src/mytest/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
src/mytest/gzip_files/: 63k.txt
src/mytest/gzip_files/tmp/: createTestFiles.sh
src/struct/: string_t.h
src/test/: CMakeLists.txt  Makefile  __master.cc  __master.h  accepter_test.cc  api_test.cc  base_test.cc  buffer_test.cc  cache_test.cc  client.py  client_test.cc  clientpool_test.cc  configer_test.cc  connector_test.cc  cpp_path.sh  currentthread_test.cc  daemon_test.cc  defer_test.cc  dict_test.cc  fcgi_client_test.cc  file_test.cc  gzip_test.cc  json_test.cc  list_test.cc  log_test.cc  main_test.cc  master_test.cc  md5_test.cc  memorypool_test.cc  messagequeue_test.cc  new_memorypool_test.cc  parser_test.cc  process_test.cc  processpool_test.cc  protocol_test.cc  proxyer_test.cc  rbtree_test.cc  reader_test.cc  sdstr_test.cc  server.cc  (+18 more)
src/tiny_base/: CMakeLists.txt  api.cc  api.h  atomic.h  buffer.cc  buffer.h  condition.cc  condition.h  configer.cc  configer.h  exception.cc  exception.h  file.cc  file.h  list_timer.cc  list_timer.h  log.cc  log.h  md5.cc  md5.h  memorypool.cc  memorypool.h  messagequeue.cc  messagequeue.h  mutex.h  new_buffer.h  reader.cc  reader.h  semaphore.cc  semaphore.h  sharedmemory.cc  sharedmemory.h  signalmanager.cc  signalmanager.h  sync.h
src/tiny_core/: CMakeLists.txt  accepter.cc  accepter.h  callback.h  channel.cc  channel.h  client.cc  client.h  clientpool.cc  clientpool.h  connection.cc  connection.h  connector.cc  connector.h  currentthread.cc  currentthread.h  defer.cc  defer.h  epoller.cc  epoller.h  eventloop.cc  eventloop.h  factory.cc  factory.h  main.cc  master.cc  master.h  netaddress.cc  netaddress.h  newmaster.h  process.cc  process.h  processpool.cc  processpool.h  protocol.cc  protocol.h  server.cc  server.h  slave.cc  slave.h  (+18 more)
src/tiny_http/: CMakeLists.txt  cache.cc  cache.h  http.cc  http.h  http_buffer.cc  http_buffer.h  http_chain.h  http_factory.cc  http_factory.h  http_model_cache.cc  http_model_cache.h  http_model_chunked.cc  http_model_chunked.h  http_model_fcgi.cc  http_model_fcgi.h  http_model_file.cc  http_model_file.h  http_model_gzip.cc  http_model_gzip.h  http_parser.cc  http_parser.h  http_protocol.cc  http_protocol.h  http_proxyer.cc  http_proxyer.h  http_responser.cc  http_responser.h  http_time.cc  http_time.h  parser.cc  parser.h  proxyer.cc  proxyer.h  responser.cc  responser.h  str_t.h
src/tiny_struct/: CMakeLists.txt  buffer_t.cc  buffer_t.h  chain_t.cc  chain_t.h  dict_t.cc  dict_t.h  list_t.cc  list_t.h  rbtree_t.cc  rbtree_t.h  sdstr_t.cc  sdstr_t.h  string_t.cc  string_t.h
test/: 1_0test.cc  Makefile  accepter_test.cc  api_test  api_test.cc  base_test.cc  buffer_test.cc  client.cc  client.py  client_test.cc  configer_test.cc  connector_test.cc  currentthread_test.cc  daemon_test.cc  defer_test.cc  dict_test.cc  list_test.cc  log_test.cc  master_test.cc  memorypool_test.cc  messagequeue_test.cc  parser_test.cc  processpool_test.cc  protocol_test.cc  rbtree_test.cc  reader_test.cc  server.py  (+13 more)
(+48 files in other folders)
